<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <WebView
        android:id="@+id/wv_guesture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"></WebView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:id="@+id/ll_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_device_address"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_connection_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_state"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/data_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="4"
                android:text="@string/no_data"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_guesture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/gesture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gesture"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/gesture_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <ProgressBar
                android:id="@+id/oad_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:max="100"
                android:progress="0"
                android:secondaryProgress="0"
                android:visibility="gone" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:gravity="end"
                android:text="@string/default_process"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_service_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/divider_horizontal_bright"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:text="@string/label_services"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:groupIndicator="@null" />
    </LinearLayout>
</RelativeLayout>